--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</div>
   <nav class="abovemap">
 	  <div id="txtBar" class="box bar center">
-				Click "start" to begin!
+				Click "start"!
 		</div>
 		<div id="btnBar" class="center">
 			<a href="#" id="btn" class="btn btn-big">start</a>
